[gd_scene load_steps=16 format=3 uid="uid://syt7ch04wile"]

[ext_resource type="Texture2D" uid="uid://bn6s33os6nniq" path="res://media/graphics/dracula_body.png" id="1_ldkrq"]
[ext_resource type="Script" path="res://scripts/dracula.gd" id="1_ue1p5"]
[ext_resource type="Texture2D" uid="uid://dg7uohix6bwp" path="res://media/graphics/dracula_head.png" id="2_fnux8"]
[ext_resource type="PackedScene" uid="uid://beu78sgaaem2q" path="res://scenes/dracula_fireball_spawner.tscn" id="4_5esyk"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="5_jf8d4"]
[ext_resource type="Script" path="res://scripts/health_component.gd" id="6_rn51w"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="7_1jk5x"]
[ext_resource type="Script" path="res://scripts/fake_hitbox.gd" id="8_4jfet"]

[sub_resource type="Animation" id="Animation_vaspu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -27)]
}

[sub_resource type="Animation" id="Animation_xfysi"]
resource_name = "appear"
length = 8.81667
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5.78333, 8.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.86667, 8.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.86667, 4.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 29), Vector2(0, 29), Vector2(0, -27)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(5.78333, 6.9, 6.9001, 7.76667, 8.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"start_body_flashing"
}, {
"args": [],
"method": &"stop_body_flashing"
}, {
"args": [],
"method": &"enable_hurtbox"
}, {
"args": [],
"method": &"spawn_fireballs"
}, {
"args": [],
"method": &"start_head_flashing"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(7.48333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(8.3, 8.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"disable_hurtbox"
}, {
"args": [],
"method": &"start_teleport_timer"
}]
}

[sub_resource type="Animation" id="Animation_dmvep"]
resource_name = "attack"
length = 2.55
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0166667, 2.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0166667, 2.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.533333, 1.46667, 2, 2.53333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"start_head_flashing"
}, {
"args": [],
"method": &"start_body_flashing"
}, {
"args": [],
"method": &"stop_head_flashing"
}, {
"args": [],
"method": &"spawn_fireballs"
}, {
"args": [],
"method": &"start_head_flashing"
}, {
"args": [],
"method": &"start_teleport_timer"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.16667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.533333, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"stop_body_flashing"
}, {
"args": [],
"method": &"disable_hurtbox"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.533333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_hurtbox"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_se5yx"]
_data = {
"RESET": SubResource("Animation_vaspu"),
"appear": SubResource("Animation_xfysi"),
"attack": SubResource("Animation_dmvep")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5rim"]
size = Vector2(8, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m418j"]
size = Vector2(8, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ao8c"]
size = Vector2(8, 42)

[node name="Dracula" type="Node2D"]
script = ExtResource("1_ue1p5")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("1_ldkrq")
hframes = 2

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(0, -27)
texture = ExtResource("2_fnux8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_se5yx")
}

[node name="FireballSpawner" parent="." instance=ExtResource("4_5esyk")]

[node name="TeleportTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.333
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
monitorable = false
script = ExtResource("5_jf8d4")
damage = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(5, -5)
shape = SubResource("RectangleShape2D_i5rim")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("6_rn51w")
max_hp = 32

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 4
collision_mask = 32
monitoring = false
monitorable = false
script = ExtResource("7_1jk5x")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(5, -27)
shape = SubResource("RectangleShape2D_m418j")

[node name="DeathTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.5
one_shot = true

[node name="FakeHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 32
monitoring = false
monitorable = false
script = ExtResource("8_4jfet")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FakeHitbox"]
position = Vector2(5, 3)
shape = SubResource("RectangleShape2D_8ao8c")

[connection signal="timeout" from="TeleportTimer" to="." method="_on_teleport_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="Hitbox" method="_on_area_entered"]
[connection signal="got_hit" from="Hitbox" to="." method="_on_hitbox_got_hit"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="area_entered" from="FakeHitbox" to="FakeHitbox" method="_on_area_entered"]
